--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
-<!DOCTYPE html>
+#details-content {
+color: #e0e0e0 !important;
+}
+
+```
+    #details-content strong {
+        color: #fff !important;
+    }
+
+    #details-content br {
+        line-height: 1.6;
+    }<!DOCTYPE html>
+```
 
 <html lang="en">
 <head>
@@ -239,6 +251,12 @@
         display: flex;
         align-items: center;
         font-size: 11px;
+        color: #e0e0e0 !important;
+        margin: 3px 0;
+    }
+
+    .legend-item span {
+        color: #e0e0e0 !important;
     }
 
     .legend-color {
@@ -270,6 +288,11 @@
         align-items: center;
         font-size: 11px;
         margin: 3px 0;
+        color: #e0e0e0 !important;
+    }
+
+    .border-style span {
+        color: #e0e0e0 !important;
     }
 
     .solid-border {
@@ -469,9 +492,9 @@
 
         <div class="legend-section">
             <h4>Infrastructure</h4>
-            <div style="font-size: 11px; line-height: 1.4;">
-                <div><strong>Aurora Border:</strong> Planet-wide electromagnetic storms causing tech failures and gravity shifts</div>
-                <div><strong>Pulse Rails:</strong> Magnetic train lines connecting only Consortium sectors (excludes all Verge territories)</div>
+            <div style="font-size: 11px; line-height: 1.4; color: #e0e0e0 !important;">
+                <div style="color: #e0e0e0 !important;"><strong style="color: #fff !important;">Aurora Border:</strong> Planet-wide electromagnetic storms causing tech failures and gravity shifts</div>
+                <div style="color: #e0e0e0 !important;"><strong style="color: #fff !important;">Pulse Rails:</strong> Magnetic train lines connecting only Consortium sectors (excludes all Verge territories)</div>
             </div>
         </div>
     </div>
