--- a/index.html
+++ b/index.html
@@ -1,16 +1,4 @@
-#details-content {
-color: #e0e0e0 !important;
-}
-
-```
-    #details-content strong {
-        color: #fff !important;
-    }
-
-    #details-content br {
-        line-height: 1.6;
     }<!DOCTYPE html>
-```
 
 <html lang="en">
 <head>
@@ -22,7 +10,7 @@ color: #e0e0e0 !important;
             box-sizing: border-box;
         }
 
-```
+
     body {
         margin: 0;
         padding: 10px;
@@ -374,6 +362,18 @@ color: #e0e0e0 !important;
         color: #ffff64;
         border: 1px solid #ffff64;
     }
+        #details-content {
+            color: #e0e0e0 !important;
+        }
+
+        #details-content strong {
+            color: #fff !important;
+        }
+
+        #details-content br {
+            line-height: 1.6;
+        }
+    </style>
 </style>
 ```
 
